fix (loading): stop jumping interface

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -3,6 +3,10 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+
+  &.loading {
+    visibility: hidden;
+  }
 }
 
 .windowContainer {
